--- a/map-reduce/pom.xml
+++ b/map-reduce/pom.xml
@@ -2,19 +2,18 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>big-data</artifactId>
+        <groupId>com.hyena.big-data</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hyena.big-data</groupId>
-    <artifactId>big-data</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>mapreduce</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>test-data-generator</module>
-        <module>commons</module>
-        <module>map-reduce</module>
-    </modules>
 
-    <name>big-data</name>
+    <name>mapreduce</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -23,43 +22,6 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.12</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.30</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.7</version>
-            </dependency>
-
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>2.6</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>RELEASE</version>
-            </dependency>
-        </dependencies>
-
-
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -71,6 +33,7 @@
     </dependencies>
 
     <build>
+
         <sourceDirectory>
             src/main/java
         </sourceDirectory>
